<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.FragmentOne">


    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/textResult"
        android:layout_width="193dp"
        android:layout_height="41dp"

        android:layout_marginLeft="40dp"
        android:layout_marginTop="210dp"
        android:text="@string/result"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textViewX2"
        android:layout_width="22dp"
        android:layout_height="45dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="100dp"
        android:text="x:"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text1Tck" />

    <TextView
        android:id="@+id/textViewY"
        android:layout_width="23dp"
        android:layout_height="44dp"
        android:layout_marginLeft="180dp"
        android:layout_marginTop="52dp"
        android:text="y:"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/text1Tck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="50dp"
        android:text="@string/first_tchk"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/inputX2"
        android:layout_width="30dp"
        android:layout_height="40dp"
        android:layout_marginLeft="130dp"
        android:layout_marginTop="100dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/textViewX"
        app:layout_constraintTop_toBottomOf="@+id/text1Tck" />

    <TextView
        android:id="@+id/textViewY2"
        android:layout_width="23dp"
        android:layout_height="44dp"
        android:layout_marginLeft="180dp"
        android:layout_marginTop="100dp"
        android:text="y:"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/inputX1"
        app:layout_constraintTop_toBottomOf="@+id/text1Tck" />

    <Button
        android:id="@+id/buttonAccess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="140dp"
        android:text="@string/get_result"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewY2" />

    <EditText
        android:id="@+id/inputY1"
        android:layout_width="30dp"
        android:layout_height="40dp"
        android:layout_marginLeft="210dp"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/textViewY"
        app:layout_constraintTop_toBottomOf="@+id/text1Tck" />

    <TextView
        android:id="@+id/textViewX"
        android:layout_width="22dp"
        android:layout_height="45dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="50dp"
        android:text="x:"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/text2Tck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="100dp"
        android:text="@string/second_tchk"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/inputY2"
        android:layout_width="30dp"
        android:layout_height="40dp"
        android:layout_marginLeft="210dp"
        android:layout_marginTop="100dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/textViewY"
        app:layout_constraintTop_toBottomOf="@+id/text1Tck" />

    <EditText
        android:id="@+id/inputX1"
        android:layout_width="30dp"
        android:layout_height="40dp"

        android:layout_marginLeft="130dp"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:id="@+id/textName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="21dp"
        android:text="@string/name_in_app"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</FrameLayout>